--- a/src/components/ProcessFlow.css
+++ b/src/components/ProcessFlow.css
@@ -84,7 +84,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 1000px;
+  width: 1100px;
   height: 100%;
   pointer-events: none;
 }
@@ -125,7 +125,6 @@
 }
 
 
-/* Responsive */
 
 
 
@@ -177,7 +176,9 @@
     flex-direction: column;
       padding: 0;
   }
- 
+ .process-section h2 {
+    font-size: 1.5rem;
+ }
   
 
   
