--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -35,6 +35,7 @@
     color: #0D0D0D;
     flex: 1;
     margin-left: -10%;
+    text-decoration: none;
 }
 
 /* phone */
@@ -123,21 +124,18 @@
   }
 
   .nav-links {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;
-  
-    flex-direction: column;
-    align-items: center;
-    display: none;
-    padding: 1rem 0;
-      background-color: white;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  flex-direction: column;
+  align-items: center;
+  display: none;
+  padding: 1rem 0;
+  background-color: white; 
+  z-index: 15;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1)
   }
-
-
-
 
   .nav-links.open {
     display: flex;
@@ -149,20 +147,6 @@
 }
 
 
-.nav-links {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  right: 0;
-  flex-direction: column;
-  align-items: center;
-  display: none;
-  padding: 1rem 0;
-  background-color: white; /* ✅ Make it white */
-  z-index: 15;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Optional: add subtle drop shadow */
-}
 
-.nav-links.open {
-  display: flex;
-}
+
+
