--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -7,7 +7,7 @@
 }
 
 .header {
-    background-color: transparent;
+    background-color: white;
     color: white;
     padding: 1rem 0;
     position: fixed;
