--- a/src/components/WhoWeAre.css
+++ b/src/components/WhoWeAre.css
@@ -32,7 +32,7 @@
 
 .who-visual {
   flex: 1;
-  min-width: 280px;
+  max-width: 400px;
   display: flex;
   align-items: center;
   justify-content: center;
