Sand energy colour implementation

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -15,7 +15,7 @@
 }
 
 .footer-brand h2 {
-  color: #B0F222;
+  color: #EB6A00;
   font-size: 1.8rem;
   margin-bottom: 0.5rem;
 }
@@ -31,7 +31,7 @@
 .footer-contact h4 {
   font-size: 1.1rem;
   margin-bottom: 1rem;
-  color: #f2f2f2;
+  color: #EB6A00;
 }
 
 .footer-links ul {
