--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -76,7 +76,7 @@
     margin-top: 1rem;
 }
 .hero-btn:hover{
-    background-color: #C3F253;
+    background-color: #F2F1DF;
 }
 
 /* grid sction */
