--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -30,6 +30,13 @@
     font-size: 3rem;
     margin-bottom: 1rem;
 }
+.hero-slide {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .hero-content p {
     font-size: 1.2rem;
     margin-bottom: 2.5rem;
@@ -37,7 +44,7 @@
     max-width: 700px;
 }
 
-/* SLIDING */
+
 .slide-in-right{
     animation:slideInRight 0.6s ease forwards;
 }
